# airqo_pipeline

./: .gitignore  README.md  app.py  main.py  pyproject.toml  readme.md
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
models/artifacts/: final_pipeline.pkl
models/mlruns/982893286645174366/: meta.yaml
models/mlruns/982893286645174366/0110d24e89664bfb989efc2d9dfe5b3b/: meta.yaml
models/mlruns/982893286645174366/0110d24e89664bfb989efc2d9dfe5b3b/metrics/: mae  r2  rmse
models/mlruns/982893286645174366/0110d24e89664bfb989efc2d9dfe5b3b/outputs/m-00f8c7125f6e43bfb2ee8a658a8d92e9/: meta.yaml
models/mlruns/982893286645174366/0110d24e89664bfb989efc2d9dfe5b3b/tags/: mlflow.runName
models/mlruns/982893286645174366/72923462a082484ea1ded0d571598af6/: meta.yaml
models/mlruns/982893286645174366/72923462a082484ea1ded0d571598af6/metrics/: mae  r2  rmse
models/mlruns/982893286645174366/72923462a082484ea1ded0d571598af6/outputs/m-3563f904f0a64c05b7f7618167dd5686/: meta.yaml
models/mlruns/982893286645174366/72923462a082484ea1ded0d571598af6/tags/: mlflow.runName
models/mlruns/982893286645174366/models/m-00f8c7125f6e43bfb2ee8a658a8d92e9/: meta.yaml
models/mlruns/982893286645174366/models/m-3563f904f0a64c05b7f7618167dd5686/: meta.yaml
notebooks/: config_experiment.ipynb  crop_yield.ipynb  ff_.ipynb  full_pipeline.ipynb
src/: config.py
src/data/: ingest.py
src/features/: transformers.py
src/inference/: predict.py
src/models/: train.py
src/utils/: plots.py
(+12 files in other folders)
